# SPLN2023

TPC1/: main.py  medicina.json
TPC2/: lex.py  medicina.txt  parser.out  parsetab.py  yacc.py
TPC3/: lex.py  medicina.html  medicina.txt  parser.out  parsetab.py  yacc.py
TPC4/: tokenizadorspln.py
TPC5/: LICENSE  abrev.txt  pyproject.toml
TPC5/tokenizerspln/: __init__.py
TPC6/: publico.py
TPC7/: main.py  publico.xml
TPC8/: main.py
